unpackaged/main/default/objects/Extension_Request_Change_Control__c/Extension_Request_Change_Control__c.object-meta.xml
<CustomObject>
    <label>Extension Request Change Control</label>
    <nameField>
        <displayFormat>ER-CC-{00000}</displayFormat>
        <label>ER-CC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extension Requests Change Control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>