unpackaged/main/default/objects/Extension_Request_Change_Control__c/fields/Change_Control__c.field-meta.xml
<CustomField>
        <fullName>Change_Control__c</fullName>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Extension Requests Change Control</relationshipLabel>
        <relationshipName>Extension_Requests_Change_Control</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>