unpackaged/main/default/objects/Extension_Request_Change_Control__c/fields/CMPL123_WF_Action_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extension_Request_Change_ControlcCMPL12</relationshipName>
        <type>Lookup</type>
    </CustomField>