unpackaged/main/default/objects/Extension_Request_Change_Control__c/fields/Current_Due_Date__c.field-meta.xml
<CustomField>
        <fullName>Current_Due_Date__c</fullName>
        <label>Current Due Date</label>
        <type>Date</type>
    </CustomField>